--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,4 @@
-sonar.host.url=http://172.17.0.2:9000
+sonar.host.url=http://localhost:9000
 
 # must be unique in a given SonarQube instance
 sonar.projectKey=Delta-Actions
@@ -7,7 +7,7 @@ sonar.password=root
 # --- optional properties ---
 
 # defaults to project key
-sonar.projectName=Angular-Clean
+sonar.projectName=Delta-Actions
 # defaults to 'not provided'
 sonar.projectVersion=1.0
  
