--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,1 +1,19 @@
 sonar.projectKey=Delta-Actions
+sonar.login=admin
+sonar.password=root
+# --- optional properties ---
+
+# defaults to project key
+sonar.projectName=Delta-Actions
+# defaults to 'not provided'
+sonar.projectVersion=1.0
+ 
+# Path is relative to the sonar-project.properties file. Defaults to .
+sonar.sources=src
+ 
+# Encoding of the source code. Default is default system encoding
+sonar.sourceEncoding=UTF-8
+
+sonar.exclusions=**/node_modules/**
+
+sonar.test=src
