feat(Eslint): Configuration

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,6 +21,7 @@
             "type": "attribute",
             "prefix": "app",
             "style": "camelCase"
+            
           }
         ],
         "@angular-eslint/component-selector": [
@@ -30,9 +31,29 @@
             "prefix": "app",
             "style": "kebab-case"
           }
+        ],
+        "max-len": [
+          "error",
+          {
+              "code": 130 ,
+              "ignoreComments": true,
+              "ignoreUrls": true,
+              "ignoreStrings": true,
+              "ignoreTemplateLiterals": true
+          }
+        ],
+        "max-nested-callbacks": ["error", 3], // Maximo de anidación en Ifs, functions etc.
+        "max-lines-per-function": [ "warn", { "max": 20, "skipBlankLines": true, "skipComments": true } ],
+        "@typescript-eslint/no-inferrable-types": [
+          2,
+          {
+            "ignoreParameters": true,
+            "ignoreProperties": true
+          }
         ]
       }
     },
+
     {
       "files": [
         "*.html"
