--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "nombre_de_la_app",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
     "release": "release-it",
-    "sonar": "sonar-scanner"
+    "sonar": "sonar-scanner",
+    "lint": "ng lint",
+    "lint:fix": "ng lint --fix"
   },
   "repository": {
     "type": "git",
@@ -23,7 +24,32 @@
     "@commitlint/config-conventional": "^17.0.3",
     "@release-it/conventional-changelog": "^5.0.0",
     "husky": "^8.0.1",
-    "release-it": "^15.1.1"
+    "release-it": "^15.1.1",
+    "eslint": "^8.28.0",
+    "eslint-config-prettier": "^8.7.0",
+    "eslint-plugin-prettier": "^4.2.1"
+  },
+  "devDependencies": {
+    "@angular-eslint/builder": "15.0.0-alpha.5",
+    "@angular-eslint/eslint-plugin": "15.0.0-alpha.5",
+    "@angular-eslint/eslint-plugin-template": "15.0.0-alpha.5",
+    "@angular-eslint/schematics": "15.0.0-alpha.5",
+    "@angular-eslint/template-parser": "15.0.0-alpha.5",
+    "@angular/compiler-cli": "^14.0.0",
+    "@commitlint/cli": "^17.0.3",
+    "@commitlint/config-conventional": "^17.0.3",
+    "@release-it/conventional-changelog": "^5.0.0",
+    "@typescript-eslint/eslint-plugin": "5.43.0",
+    "@typescript-eslint/parser": "5.43.0",
+    "eslint": "^8.28.0",
+    "eslint-config-prettier": "^8.7.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "husky": "^8.0.1",
+    "prettier": "^2.8.4",
+    "prettier-eslint": "^15.0.1",
+    "release-it": "^15.1.1",
+    "sonar-scanner": "^3.1.0",
+    "typescript": "~4.7.2"
   },
   "release-it": {
     "git": {
