--- a/package.json
+++ b/package.json
@@ -1,25 +1,54 @@
 {
-  "name": "nombre_de_la_app",
-  "version": "1.0.0",
-  "description": "",
+  "name": "clean-arquitecture",
+  "version": "0.0.0",
   "scripts": {
+    "ng": "ng",
+    "start": "ng serve",
+    "build": "ng build",
+    "watch": "ng build --watch --configuration development",
+    "test": "ng test",
     "release": "release-it",
     "sonar": "sonar-scanner",
     "lint": "ng lint",
     "lint:fix": "ng lint --fix"
   },
-  "repository": {
+    "repository": {
     "type": "git",
     "url": "git+https://github.com/Angular-Clean.git"
   },
-  "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Angular-Clean/issues"
   },
   "homepage": "https://github.com/Angular-Clean#readme",
+
+  "private": true,
   "dependencies": {
+    "@angular/animations": "^15.2.0",
+    "@angular/common": "^15.2.0",
+    "@angular/compiler": "^15.2.0",
+    "@angular/core": "^15.2.0",
+    "@angular/forms": "^15.2.0",
+    "@angular/platform-browser": "^15.2.0",
+    "@angular/platform-browser-dynamic": "^15.2.0",
+    "@angular/router": "^15.2.0",
+    "rxjs": "~7.8.0",
+    "tslib": "^2.3.0",
+    "zone.js": "~0.12.0"
+  },
+  "devDependencies": {
+    "@angular-devkit/build-angular": "^15.2.4",
+    "@angular/cli": "~15.2.4",
+    "@angular/compiler-cli": "^15.2.0",
+    "@types/jasmine": "~4.3.0",
+    "jasmine-core": "~4.5.0",
+    "karma": "~6.4.0",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage": "~2.2.0",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "~2.0.0",
+    "typescript": "~4.9.4",
     "@commitlint/cli": "^17.0.3",
     "@commitlint/config-conventional": "^17.0.3",
     "@release-it/conventional-changelog": "^5.0.0",
@@ -29,29 +58,7 @@
     "eslint-config-prettier": "^8.7.0",
     "eslint-plugin-prettier": "^4.2.1"
   },
-  "devDependencies": {
-    "@angular-eslint/builder": "15.0.0-alpha.5",
-    "@angular-eslint/eslint-plugin": "15.0.0-alpha.5",
-    "@angular-eslint/eslint-plugin-template": "15.0.0-alpha.5",
-    "@angular-eslint/schematics": "15.0.0-alpha.5",
-    "@angular-eslint/template-parser": "15.0.0-alpha.5",
-    "@angular/compiler-cli": "^14.0.0",
-    "@commitlint/cli": "^17.0.3",
-    "@commitlint/config-conventional": "^17.0.3",
-    "@release-it/conventional-changelog": "^5.0.0",
-    "@typescript-eslint/eslint-plugin": "5.43.0",
-    "@typescript-eslint/parser": "5.43.0",
-    "eslint": "^8.28.0",
-    "eslint-config-prettier": "^8.7.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "husky": "^8.0.1",
-    "prettier": "^2.8.4",
-    "prettier-eslint": "^15.0.1",
-    "release-it": "^15.1.1",
-    "sonar-scanner": "^3.1.0",
-    "typescript": "~4.7.2"
-  },
-  "release-it": {
+   "release-it": {
     "git": {
       "commitMessage": "chore: release v${version}"
     },
