--- a/package.json
+++ b/package.json
@@ -48,6 +48,11 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
+    "@angular-eslint/builder": "15.2.4",
+    "@angular-eslint/eslint-plugin": "15.2.4",
+    "@angular-eslint/eslint-plugin-template": "15.2.4",
+    "@angular-eslint/schematics": "15.2.4",
+    "@angular-eslint/template-parser": "15.2.4",
     "typescript": "~4.9.4",
     "@commitlint/cli": "^17.0.3",
     "@commitlint/config-conventional": "^17.0.3",
