--- a/package.json
+++ b/package.json
@@ -9,10 +9,9 @@
     "test": "ng test",
     "release": "release-it",
     "sonar": "sonar-scanner",
-    "lint": "ng lint",
-    "lint:fix": "ng lint --fix"
+    "lint": "ng lint"
   },
-    "repository": {
+  "repository": {
     "type": "git",
     "url": "git+https://github.com/Angular-Clean.git"
   },
@@ -22,7 +21,6 @@
     "url": "https://github.com/Angular-Clean/issues"
   },
   "homepage": "https://github.com/Angular-Clean#readme",
-
   "private": true,
   "dependencies": {
     "@angular/animations": "^15.2.0",
@@ -39,31 +37,31 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^15.2.4",
+    "@angular-eslint/builder": "15.2.1",
+    "@angular-eslint/eslint-plugin": "15.2.1",
+    "@angular-eslint/eslint-plugin-template": "15.2.1",
+    "@angular-eslint/schematics": "15.2.1",
+    "@angular-eslint/template-parser": "15.2.1",
     "@angular/cli": "~15.2.4",
     "@angular/compiler-cli": "^15.2.0",
+    "@commitlint/cli": "^17.0.3",
+    "@commitlint/config-conventional": "^17.0.3",
+    "@release-it/conventional-changelog": "^5.0.0",
     "@types/jasmine": "~4.3.0",
+    "@typescript-eslint/eslint-plugin": "5.48.2",
+    "@typescript-eslint/parser": "5.48.2",
+    "eslint": "^8.33.0",
+    "husky": "^8.0.1",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
-    "@angular-eslint/builder": "15.2.1",
-    "@angular-eslint/eslint-plugin": "15.2.1",
-    "@angular-eslint/eslint-plugin-template": "15.2.1",
-    "@angular-eslint/schematics": "15.2.1",
-    "@angular-eslint/template-parser": "15.2.1",
-    "typescript": "~4.9.4",
-    "@commitlint/cli": "^17.0.3",
-    "@commitlint/config-conventional": "^17.0.3",
-    "@release-it/conventional-changelog": "^5.0.0",
-    "husky": "^8.0.1",
     "release-it": "^15.1.1",
-    "eslint": "^8.28.0",
-    "eslint-config-prettier": "^8.7.0",
-    "eslint-plugin-prettier": "^4.2.1"
+    "typescript": "~4.9.4"
   },
-   "release-it": {
+  "release-it": {
     "git": {
       "commitMessage": "chore: release v${version}"
     },
