--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
     "release-it": "^15.1.1",
+    "sonar-scanner": "^3.1.0",
     "typescript": "~4.9.4"
   },
   "release-it": {
